[package]
description = "A Tuxedo piece that provides a DAP currency"
edition = "2021"
name = "tux0"
version = "0.1.0"

[dependencies]
# Substrate dependencies
parity-scale-codec = { features = [ "derive" ], workspace = true }
scale-info = { features = [ "derive" ], workspace = true }
serde = { features = [ "derive" ], optional = true, workspace = true }
sp-core = { default_features = false, workspace = true }
sp-runtime = { default_features = false, workspace = true }
sp-std = { default_features = false, workspace = true }

# Tuxedo dependencies
money = { path = "../money" }
tuxedo-core = { default-features = false, path = "../../tuxedo-core" }

# Crypto dependencies
ecies-ed25519 = "0.5.1"
rand = "0.7.3"

[features]
default = [ "std" ]
std = [
	"tuxedo-core/std",
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"serde",
]
